; ModuleID = '/home/carl/AnghaBench/RetroArch/menu/cbs/extr_menu_cbs_get_value.c_general_disp_set_label_perf_counters.c'
source_filename = "/home/carl/AnghaBench/RetroArch/menu/cbs/extr_menu_cbs_get_value.c_general_disp_set_label_perf_counters.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.retro_perf_counter = type { i32 }

@MENU_ANIMATION_CTL_SET_ACTIVE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.retro_perf_counter**, i32, i8*, i64, i8*, i64, i8*, i32*)* @general_disp_set_label_perf_counters to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @general_disp_set_label_perf_counters(%struct.retro_perf_counter** %0, i32 %1, i8* %2, i64 %3, i8* %4, i64 %5, i8* %6, i32* %7) #0 {
  %9 = alloca %struct.retro_perf_counter**, align 8
  %10 = alloca i32, align 4
  %11 = alloca i8*, align 8
  %12 = alloca i64, align 8
  %13 = alloca i8*, align 8
  %14 = alloca i64, align 8
  %15 = alloca i8*, align 8
  %16 = alloca i32*, align 8
  store %struct.retro_perf_counter** %0, %struct.retro_perf_counter*** %9, align 8
  store i32 %1, i32* %10, align 4
  store i8* %2, i8** %11, align 8
  store i64 %3, i64* %12, align 8
  store i8* %4, i8** %13, align 8
  store i64 %5, i64* %14, align 8
  store i8* %6, i8** %15, align 8
  store i32* %7, i32** %16, align 8
  %17 = load i8*, i8** %11, align 8
  store i8 0, i8* %17, align 1
  %18 = load i32*, i32** %16, align 8
  store i32 19, i32* %18, align 4
  %19 = load i8*, i8** %13, align 8
  %20 = load i8*, i8** %15, align 8
  %21 = load i64, i64* %14, align 8
  %22 = call i32 @strlcpy(i8* %19, i8* %20, i64 %21)
  %23 = load %struct.retro_perf_counter**, %struct.retro_perf_counter*** %9, align 8
  %24 = load i32, i32* %10, align 4
  %25 = load i8*, i8** %11, align 8
  %26 = load i64, i64* %12, align 8
  %27 = call i32 @menu_action_setting_disp_set_label_perf_counters_common(%struct.retro_perf_counter** %23, i32 %24, i8* %25, i64 %26)
  %28 = load i32, i32* @MENU_ANIMATION_CTL_SET_ACTIVE, align 4
  %29 = call i32 @menu_animation_ctl(i32 %28, i32* null)
  ret void
}

declare dso_local i32 @strlcpy(i8*, i8*, i64) #1

declare dso_local i32 @menu_action_setting_disp_set_label_perf_counters_common(%struct.retro_perf_counter**, i32, i8*, i64) #1

declare dso_local i32 @menu_animation_ctl(i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
